Updated OpenAPI annotations and README
